# Break_the_Bricks

./: README.md
Break_the_Bricks/: CMakeLists.txt  main.c
Break_the_Bricks/include/: ball.h  bricks.h  colors.h  game.h  key.h  paddle.h  screen.h
Break_the_Bricks/res/: credits.txt  instructions.txt  menu.txt  title.txt
Break_the_Bricks/src/: ball.c  bricks.c  colors.c  game.c  key.c  paddle.c  screen.c
